# core

./: .gitignore  .licenserc.yaml  .npmrc  .pnp.cjs  .pnp.loader.mjs  .pre-commit-config.yaml  .prettierignore  API.md  API_COVERAGE.md  BATCH_10_SUMMARY.md  BATCH_11_SUMMARY.md  BATCH_12_SUMMARY.md  BATCH_13_SUMMARY.md  BATCH_1_SUMMARY.md  BATCH_2_SUMMARY.md  BATCH_3_SUMMARY.md  BATCH_4_SUMMARY.md  BATCH_5_SUMMARY.md  BATCH_6_SUMMARY.md  BATCH_7_SUMMARY.md  BATCH_8_SUMMARY.md  BATCH_9_SUMMARY.md  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_JUPYTER_UI.md  Makefile  README.md  RELEASE.md  TESTING.md  UNIFIED_AUTH_PLAN.md  USECACHE2_STATUS.md  USECACHE_MIGRATION_STATUS.md  analyze-types.md  check-type-usage.sh  conftest.py  eslint.config.cjs  eslint.config.js  (+23 more)
.github/workflows/: build.yml  check-code-style.yml  check-release.yml  check-typing.yml  claude-code-review.yml  claude.yml  deploy-docs.yml  desktop-build.yml  desktop-code-quality.yml  docs.yml  fix-license-header.yml  py-code-style.yml  py-tests.yml  py-typing.yml  reusable-typescript.yml  test.yml  tests.yml  ts-code-style.yml  ts-tests.yml  ts-typing.yml  update-integration-tests.yml
.storybook/: main.ts
conda-recipe/: README.md  meta.yaml  post-link.sh  publish-conda.sh
datalayer/: __init__.py  __main__.py  application.py  command.py  config.py  handlers.py  lab.py  paths.py  serverapplication.py  troubleshoot.py
datalayer/about/: about.md  aboutapp.py
datalayer/authn/: __main__.py  http_server.py  pages.py
datalayer/cli/: base.py  datalayer.py
datalayer/kernels/: kernelsapp.py  manager.py
datalayer/templates/: index.html
datalayer/tests/: test_handlers.py
datalayer/utils/: __init__.py
datalayer_core/: __init__.py  __main__.py  __version__.py  _version.py  about.md  application.py  command.py  config.py  lab.py  migrate.py  models.py  paths.py  serverapplication.py  tools.py  troubleshoot.py
datalayer_core/_pydoc/: __init__.py  replace_renderer.py
datalayer_core/about/: about.md  aboutapp.py
datalayer_core/agents/: __init__.py  mcp.py  models.py
datalayer_core/app/: application.py  config.py  paths.py  serverapplication.py
datalayer_core/assets/: about.md
datalayer_core/auth/: __init__.py  manager.py
datalayer_core/authn/: __init__.py  __main__.py  authn.py  http_server.py  keys.py  pages.py  state.py  storage.py  strategies.py
datalayer_core/base/: application.py  config.py  migrate.py  paths.py  serverapplication.py  user_config.py
datalayer_core/benchmarks/: __init__.py  benchmarksapp.py
datalayer_core/cli/: TYPER_CLI_MIGRATION.md  __init__.py  __main__.py  about.py  base.py  datalayer.py  typer_cli_example.py
datalayer_core/cli0/: base.py  datalayer.py
datalayer_core/cliapp/: base.py  datalayer.py
datalayer_core/client/: __init__.py  client.py
datalayer_core/console/: consoleapp.py  manager.py
datalayer_core/decorators/: datalayer.py  decorators.py
datalayer_core/display/: display.py  me.py  runtimes.py  secrets.py  snapshots.py  tokens.py
datalayer_core/displays/: agent_nodes.py  api_keys.py  environments.py  me.py  runtime_checkpoints.py  runtime_snapshots.py  runtimes.py  sandbox_snapshots.py  secrets.py  snapshots.py  usage.py
datalayer_core/environments/: __init__.py  environmentsapp.py  utils.py
datalayer_core/handlers/: __init__.py  base.py  chat.py  configure.py  mcp.py
datalayer_core/kernels/: client.py  kernelsapp.py  manager.py  utils.py
datalayer_core/mixins/: __init__.py  agent_spaces.py  api_keys.py  authn.py  environment.py  environments.py  evals.py  events.py  ray.py  runtime_snapshots.py  runtimes.py  sandbox_snapshots.py  secrets.py  snapshots.py  tokens.py  usage.py  whoami.py
datalayer_core/models/: __init__.py  _response.py  ai_inference.py  api_key.py  base.py  environment.py  environments.py  growth.py  iam.py  profile.py  runtime.py  runtime_snapshot.py  sandbox_snapshot.py  secret.py  secrets.py  token.py  tokens.py
datalayer_core/otel/: __init__.py  client.py  config.py  emitter.py  logfire.py
datalayer_core/pydoc/: __init__.py  np2md.py  replace_processor.py  replace_renderer.py  template.np  unwrap_docstrings.py
datalayer_core/runtimes/: __init__.py  agent_runtime.py  local.py  manager.py  runtime.py  runtimesapp.py  sandbox_snapshot.py  utils.py
datalayer_core/sdk/: __init__.py  auth.py  authn.py  client.py  datalayer.py  decorators.py  profile.py  response.py  runtimes.py  secrets.py  tokens.py  utils.py  variables.py
datalayer_core/secrets/: __init__.py  secretsapp.py  utils.py
datalayer_core/services/: runtime.py  runtime_snapshot.py  runtimes.py  snapshots.py
datalayer_core/snapshots/: __init__.py  snapshotsapp.py  utils.py
datalayer_core/static/: README.md
datalayer_core/templates/: index.html
datalayer_core/tests/: __init__.py  test_auth_cross_platform.py  test_auth_integration.py  test_authn.py  test_authn_storage.py  test_cli.py  test_cli_exec_examples.py  test_cli_main.py  test_client.py  test_decorators.py  test_handlers.py  test_kernel_client.py  test_ray.py  test_sdk.py  test_usage.py  (+2 more)
dev/: DEVELOPMENT.md  README.md
docs/: .gitignore  API-TESTING.md  Makefile  README.md  babel.config.js  docusaurus.config.js  environment.yml  package.json  sidebars.js
examples/: README.md  sdk.py
patches/: .gitkeep  @datalayer+jupyter-lexical+1.0.6.patch  @datalayer+jupyter-lexical+1.0.7.patch  @datalayer+jupyter-react+1.1.8.patch  @datalayer+jupyter-react+1.1.9.patch  @datalayer+jupyter-react+2.0.1.patch
public/: index.html
schema/: plugin.json
scripts/: apply-patches.sh  check-runtime-cleanup.js  create-patches.sh  fix-esm-imports.cjs  sync-jupyter.sh
src/: API.md  App.css  App.tsx  ChatComponent.tsx  ChatWidget.tsx  Datalayer.tsx  DatalayerApp.tsx  DatalayerDev.tsx  DatalayerJupyterLab.tsx  DatalayerJupyterLabHeadless.tsx  LoginCLIApp.tsx  Part.tsx  README.md  constants.ts  handler.ts  index.css  index.ts  main.tsx  node.ts  test-setup.ts  types.ts  vite-env.d.ts  widget.tsx
style/: base.css  chat.css  index.css  index.js
ui-tests/: package.json
(+1643 files in other folders)
